Added Danish translation, thanks to Christian Damsgaard

--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -12,8 +12,7 @@ GenericName[lt]=Naujo el. pašto pranešiklis
 GenericName[it]=Notificatore di nuove email
 GenericName[hu]=Új email értesítő
 GenericName[es]=Notificador de correo nuevo
-GenericName[cs]=Hlídač nových emailů
-GenericName[ca]=Nou notificador de correu
+GenericName[da]=Ny e-mail meddelse
 GenericName[ar]=منبه جديد بالبريد
 Comment=A Kicker applet to display how many email messages you have in your Gmail account.
 Comment[zh_CN]=Kicker面板显示你已经收到了多少邮件
@@ -25,7 +24,7 @@ Comment[hu]=Egy Kicker alkalmazás, amely jelzi, hogy hány email van a GMail fi
 Comment[fr]=Un applet kicker qui affiche le nombre de nouveaux messages sur un compte Gmail.
 Comment[es]=Mini aplicación que muestra el número de mensajes sin leer en una cuenta de Gmail.
 Comment[el]=Μία εφαρμογή Kicker που σας εμφανίζει τα νέα μηνύματα του Gmail λογαριασμού σας
-Comment[cs]=Kicker aplet zobrazujicí počet nových emailů v GMail účtu.
+Comment[da]=En lille program til Statusfeltet, der viser hvormange e-mails du har på din Gmail konto.
 Comment[ca]=Mini aplicació que mostra el nombre de missatges sense llegir en un compte deGmail.
 Comment[ar]=بريمج يبين عدد الرسائل الإلكترونية في حساب GMail التي لديك.
 Exec=kcheckgmail
