--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -6,6 +6,7 @@ GenericName=New email notifier
 GenericName[zh_CN]=新邮件提示
 GenericName[wa]=Notifieu d' noveas emiles
 GenericName[tr]=Yeni E-posta Bildiricisi
+GenericName[ru]=Новое уведомление о письме
 GenericName[pt]=Notificador de mensagens novas
 GenericName[pl]=Powiadomienia o nowej poczcie
 GenericName[lt]=Naujo el. pašto pranešiklis
@@ -20,6 +21,7 @@ GenericName[ar]=منبه جديد بالبريد
 Comment=A Kicker applet to display how many email messages you have in your Gmail account.
 Comment[zh_CN]=Kicker面板显示你已经收到了多少邮件
 Comment[tr]=Gmail hesabınızda kaç tane yeni e-posta olduğunu gösteren bir panel programcığıdır.
+Comment[ru]=Аплет Kicker, показывающая количество показывающая количество писем в Вашем Gmail.
 Comment[pt]=Uma 'applet' que inicia uma aplicação que mostra quantas mensagens por ler tem na sua conta Gmail.
 Comment[pl]=Aplet panelu do pokazywania zawartości Twojej skrzynki pocztowej Gmail
 Comment[it]=Un'applet di Kicker per visualizzare quanti messaggi di posta elettronica sono presenti nel tuo account di Gmail.
