--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -6,6 +6,7 @@ GenericName=New email notifier
 GenericName[zh_CN]=新邮件提示
 GenericName[wa]=Notifieu d' noveas emiles
 GenericName[tr]=Yeni E-posta Bildiricisi
+GenericName[sv]=Underrättelse vid ny e-post
 GenericName[ru]=Новое уведомление о письме
 GenericName[pt]=Notificador de mensagens novas
 GenericName[pl]=Powiadomienia o nowej poczcie
