Add the src directory
Only the src. One thing at a time.

Signed-off-by: Luís Pereira <luis.artur.pereira@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY
 
 message(STATUS "${CMAKE_CURRENT_SOURCE_DIR}: skipped subdir $(TOPSUBDIRS)")
 
+add_subdirectory( src )
+
 ########### install files ###############
 
 
