Adds cmake minimum required version test
Signed-off-by: Luís Pereira <luis.artur.pereira@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 project(kcheckgmail)
 
+# Check for cmake minimum for KDE 4.0.0
+cmake_minimum_required(VERSION 2.4.5)
+
 set(KCHECKGMAIL_VERSION "0.5.8-dev")
 
 find_package(KDE4 REQUIRED)
