Adds po dir to the build system. Updates translactions
Squashed commit of the following:

commit 99df3756878152ddb3309d1b39c00c30b645bbe1
Author: Luís Pereira <luis.artur.pereira@gmail.com>
Date:   Thu May 28 12:20:26 2009 -0700

    Ran mergetrans

    Signed-off-by: Luís Pereira <luis.artur.pereira@gmail.com>

commit a584d5d8270fc41a2e8e202d2e53f588a46bfe55
Author: Luís Pereira <luis.artur.pereira@gmail.com>
Date:   Thu May 28 12:19:38 2009 -0700

    Ran maketrans

    Signed-off-by: Luís Pereira <luis.artur.pereira@gmail.com>

commit b683a719208d7188196dd691c80ce94ad0f006e3
Author: Luís Pereira <luis.artur.pereira@gmail.com>
Date:   Thu May 28 12:18:52 2009 -0700

    Adds po dir to the build system

    Signed-off-by: Luís Pereira <luis.artur.pereira@gmail.com>

Signed-off-by: Luís Pereira <luis.artur.pereira@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ message(STATUS "${CMAKE_CURRENT_SOURCE_DIR}: skipped subdir $(TOPSUBDIRS)")
 
 add_subdirectory( src )
 add_subdirectory( icons )
+add_subdirectory( po )
 
 ########### install files ###############
 
