Renames binary target
Clearer code.

Signed-off-by: Luís Pereira <luis.artur.pereira@gmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,11 +26,11 @@ qt4_add_dbus_adaptor(kcheckgmail_SRCS org.kcheckgmail.kcheckgmail.xml kcheckgmai
 
 kde4_add_kcfg_files(kcheckgmail_SRCS prefs.kcfgc)
 
-kde4_add_executable(kcheckgmail ${kcheckgmail_SRCS})
+kde4_add_executable(kcheckgmail_bin ${kcheckgmail_SRCS})
 
-target_link_libraries(kcheckgmail ${KDE4_KDECORE_LIBS} ${KDE4_KDEUI_LIBS} ${KDE4_KIO_LIBS} ${KDE4_KNOTIFYCONFIG_LIBS} )
+target_link_libraries(kcheckgmail_bin ${KDE4_KDECORE_LIBS} ${KDE4_KDEUI_LIBS} ${KDE4_KIO_LIBS} ${KDE4_KNOTIFYCONFIG_LIBS} )
 
-install(TARGETS kcheckgmail ${INSTALL_TARGETS_DEFAULT_ARGS})
+install(TARGETS kcheckgmail_bin ${INSTALL_TARGETS_DEFAULT_ARGS})
 
 
 ########### install files ###############
