--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -19,6 +19,7 @@ GenericName[cs]=Hlídač nových emailů
 GenericName[ca]=Nou notificador de correu
 GenericName[cs]=Hlídač nových emailů
 GenericName[ar]=منبه جديد بالبريد
+GenericName[et]=Uute e-kirjade teadustaja
 Comment=A Kicker applet to display how many email messages you have in your Gmail account.
 Comment[zh_CN]=Kicker面板显示你已经收到了多少邮件
 Comment[tr]=Gmail hesabınızda kaç tane yeni e-posta olduğunu gösteren bir panel programcığıdır.
@@ -35,6 +36,7 @@ Comment[cs]=Kicker aplet zobrazujicí počet nových emailů v GMail účtu.
 Comment[ca]=Mini aplicació que mostra el nombre de missatges sense llegir en un compte deGmail.
 Comment[cs]=Kicker aplet zobrazujicí počet nových emailů v GMail účtu.
 Comment[ar]=بريمج يبين عدد الرسائل الإلكترونية في حساب GMail التي لديك.
+Comment[ar]=Kickeri aplett, mis näitab, mitu lugemata kirja sinu Gmaili kontol on.
 Exec=kcheckgmail
 Icon=kcheckgmail
 X-KDE-StartupNotify=true
