--- a/configure.in
+++ b/configure.in
@@ -40,7 +40,7 @@ dnl Perform program name transformation
 AC_ARG_PROGRAM
 
 dnl Automake doc recommends to do this only here. (Janos)
-AM_INIT_AUTOMAKE(kcheckgmail, 0.5.8.dev) dnl searches for some needed programs
+AM_INIT_AUTOMAKE(kcheckgmail, 0.5.8) dnl searches for some needed programs
 
 AM_MAINTAINER_MODE
 
