--- a/configure.in.in
+++ b/configure.in.in
@@ -1,6 +1,6 @@
 #MIN_CONFIG(3.2)
 
-AM_INIT_AUTOMAKE(kcheckgmail, 0.5.8.dev)
+AM_INIT_AUTOMAKE(kcheckgmail, 0.5.8)
 AC_C_BIGENDIAN
 AC_CHECK_KDEMAXPATHLEN
 
