Updates Greek translation
Thanks to Glentadakis Dimitrios.

Signed-off-by: Luís Pereira <luis.artur.pereira@gmail.com>

--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -14,6 +14,7 @@ GenericName[lt]=Naujo el. pašto pranešiklis
 GenericName[it]=Notificatore di nuove email
 GenericName[hu]=Új email értesítő
 GenericName[es]=Notificador de correo nuevo
+GenerecNAme[el]=Ειδοποιητής νέας αλληλογραφίας
 GenericName[da]=Ny e-mail meddelse
 GenericName[cs]=Hlídač nových emailů
 GenericName[ca]=Nou notificador de correu
@@ -29,7 +30,7 @@ Comment[it]=Un'applet di Kicker per visualizzare quanti messaggi di posta elettr
 Comment[hu]=Egy Kicker alkalmazás, amely jelzi, hogy hány email van a GMail fiókjában.
 Comment[fr]=Un applet kicker qui affiche le nombre de nouveaux messages sur un compte Gmail.
 Comment[es]=Mini aplicación que muestra el número de mensajes sin leer en una cuenta de Gmail.
-Comment[el]=Μία εφαρμογή Kicker που σας εμφανίζει τα νέα μηνύματα του Gmail λογαριασμού σας
+Comment[el]=Μία εφαρμογή πλαισίου συστήματος που εμφανίζει πόσα νέα μηνύματα αλληλογραφίας έχετε στον λογαριασμό σας Gmail
 Comment[da]=En lille program til Statusfeltet, der viser hvormange e-mails du har på din Gmail konto.
 Comment[cs]=Kicker aplet zobrazujicí počet nových emailů v GMail účtu.
 Comment[ca]=Mini aplicació que mostra el nombre de missatges sense llegir en un compte deGmail.
