--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -15,6 +15,7 @@ GenericName[it]=Notificatore di nuove email
 GenericName[hu]=Új email értesítő
 GenericName[es]=Notificador de correo nuevo
 GenerecNAme[el]=Ειδοποιητής νέας αλληλογραφίας
+GenericName[et]=Uute e-kirjade teadustaja
 GenericName[da]=Ny e-mail meddelse
 GenericName[cs]=Hlídač nových emailů
 GenericName[ca]=Nou notificador de correu
@@ -31,6 +32,7 @@ Comment[hu]=Egy Kicker alkalmazás, amely jelzi, hogy hány email van a GMail fi
 Comment[fr]=Un applet kicker qui affiche le nombre de nouveaux messages sur un compte Gmail.
 Comment[es]=Mini aplicación que muestra el número de mensajes sin leer en una cuenta de Gmail.
 Comment[el]=Μία εφαρμογή πλαισίου συστήματος που εμφανίζει πόσα νέα μηνύματα αλληλογραφίας έχετε στον λογαριασμό σας Gmail
+Comment[et]=Süsteemisalve aplett, mis näitab, mitu lugemata kirja sinu Gmaili kontol on.
 Comment[da]=En lille program til Statusfeltet, der viser hvormange e-mails du har på din Gmail konto.
 Comment[cs]=Kicker aplet zobrazujicí počet nových emailů v GMail účtu.
 Comment[ca]=Mini aplicació que mostra el nombre de missatges sense llegir en un compte deGmail.
