--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -14,7 +14,7 @@ GenericName[lt]=Naujo el. pašto pranešiklis
 GenericName[it]=Notificatore di nuove email
 GenericName[hu]=Új email értesítő
 GenericName[es]=Notificador de correo nuevo
-GenerecNAme[el]=Ειδοποιητής νέας αλληλογραφίας
+GenericName[el]=Ειδοποιητής νέας αλληλογραφίας
 GenericName[et]=Uute e-kirjade teadustaja
 GenericName[da]=Ny e-mail meddelse
 GenericName[cs]=Hlídač nových emailů
